# polygene

./: .gitignore  README.md  pyproject.toml
polygene/: generator.py  main.py  templates.py
polygene/prompts/: condition.prompt  persona.prompt
