[tool.poetry]
name = "polygene"
version = "0.1.0"
description = "Persona Generator"
authors = ["Masahiro Nishimi <mah@edged-edge.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.123"
openai = "^0.27.2"
click = "^8.1.3"
prettytable = "^3.6.0"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
polygene = "polygene.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

